# stratego

./: CMakeLists.txt  board.cpp  board.h  main.cpp  piece.cpp  piece.h  piecetextures.cpp  piecetextures.h  strategoGame.cpp  strategoGame.h
